Fix dark spacing for progress and text

--- a/playbook/app/pb_kits/playbook/pb_passphrase/_passphrase.scss
+++ b/playbook/app/pb_kits/playbook/pb_passphrase/_passphrase.scss
@@ -37,7 +37,7 @@
       }
     }
 
-    + .pb_progress_simple_wrapper {
+    + .pb_progress_simple_wrapper, + .pb_progress_simple_wrapper_dark {
       margin-bottom: 4px;
     }
   }
